--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 </head>
 
 <body>
+
+<div id="top">
 <script>text("title.xml");</script>
+</div>
+
 <div id="main_flow">
 
 <script>text("welcome.xml");</script>
-<footer>&#169 Nick Birney 2013</footer>
-
 </div>
 
-
-
+<div id="bottom">
+<footer>&#169 Nick Birney 2013</footer>
+</div>
 </body>
 </html>
