--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script src="xml.js"></script>
 <link rel = "stylesheet" type = "text/css" href = "main.css" />
-<title>Welcome to Nick Birney's Website</title>
+<title>Welcome to Nick's Website</title>
 </head>
 
 <body>
