updated top banner

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
 
 <div id="top">
-<script>text("title.xml");</script>
 </div>
 
 <div id="main_flow">
@@ -22,7 +21,7 @@
 </div>
 
 <div id="bottom">
-copyright Nick Birney
+<footer>copyright Nick Birney</footer>
 </div>
 </body>
 </html>
