--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
 <div id="main_flow">
 
+<div id="title_box">
+<p id="title_text">Welcome</p>
+</div>
+
 <script>text("welcome.xml");</script>
 </div>
 
